<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="
            http://maven.apache.org/POM/4.0.0
            https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.devidian</groupId>
    <artifactId>rw-plugin-maven-template</artifactId>
    <version>0.0.2</version>

    <name>MavenTemplate</name>
    <description>No description yet</description>

    <!-- Repositories -->
    <repositories>
        <!-- <repository>
            <id>central</id>
            <name>Maven Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository> -->

        <!-- <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository> -->

        <repository>
            <id>github-oz-tools</id>
            <url>https://maven.pkg.github.com/Devidian/rw-plugin-oz-tools</url>
        </repository>

    </repositories>

    <dependencies>

        <!-- OZ Plugins -->

        <dependency>
            <groupId>com.github.devidian</groupId>
            <artifactId>rw-plugin-oz-tools</artifactId>
            <version> 0.23.14</version>
        </dependency>

        <!-- Rising World PluginAPI -->
        <dependency>
            <groupId>net.risingworld</groupId>
            <artifactId>PluginAPI</artifactId>
            <version>0.9.3</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <directory>target</directory>
        <finalName>${project.name}</finalName>

        <resources>
            <resource>
                <targetPath>resources</targetPath>
                <directory>${basedir}/src/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>

        <plugins>

            <!-- clear plugin dist directory -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.3.2</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${project.basedir}/dist/${project.name}</directory>
                            <includes>
                                <include>**/*</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>install-api-lib</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <configuration>
                            <file>${project.basedir}/libs/PluginAPI.jar</file>
                            <groupId>net.risingworld</groupId>
                            <artifactId>PluginAPI</artifactId>
                            <version>0.9.3</version>
                            <packaging>jar</packaging>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>20</release>
                    <source>20</source>
                    <target>20</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.0</version>

                <executions>
                    <!-- Dependency copying if needed -->
                    <!-- <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/dist/${project.name}/lib</outputDirectory>
                            <excludeTypes>pom</excludeTypes>
                            <excludeScope>provided</excludeScope>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution> -->
                    <!-- Copy jar -->
                    <execution>
                        <id>copy-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>${project.groupId}</groupId>
                                    <artifactId>${project.artifactId}</artifactId>
                                    <version>${project.version}</version>
                                    <type>jar</type>
                                    <destFileName>${project.name}.jar</destFileName>
                                    <outputDirectory>${basedir}/dist/${project.name}</outputDirectory>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Resource copying -->
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <!-- copy markdownfiles -->
                    <execution>
                        <id>copy-markdown</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/dist/${project.name}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${basedir}</directory>
                                    <includes>
                                        <include>README.md</include>
                                        <include>HISTORY.md</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                    <!-- copy properties (settings.default) -->
                    <execution>
                        <id>copy-settings</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/dist/${project.name}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${basedir}/src</directory>
                                    <includes>
                                        <include>*.json</include>
                                        <include>*.properties</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                    <!-- copy asset files -->
					<execution>
						<id>copy-assets</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/dist/${project.name}/assets</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/src/assets</directory>
									<includes>
										<include>*.*</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
                    <!-- copy translation files -->
                    <execution>
                        <id>copy-resource-two</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/dist/${project.name}/i18n</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${basedir}/src/i18n</directory>
                                    <includes>
                                        <include>**/*.json</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>zip-dist-for-release</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <appendAssemblyId>false</appendAssemblyId>
                            <finalName>${project.name}-${project.version}</finalName>

                            <!-- Important: Inline descriptor -->
                            <descriptors>
                                <descriptor>src/assembly/${project.artifactId}.xml</descriptor>
                            </descriptors>

                            <outputDirectory>${project.basedir}/dist</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>20</maven.compiler.source>
        <maven.compiler.target>20</maven.compiler.target>
        <maven.compiler.release>20</maven.compiler.release>
    </properties>
</project>
